--- a/jaxrs-dynamic-filters/pom.xml
+++ b/jaxrs-dynamic-filters/pom.xml
@@ -140,5 +140,10 @@
             <artifactId>jackson-xc</artifactId>
             <version>1.9.0</version>
         </dependency>
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-jdk14</artifactId>
+		<version>1.7.7</version>
+	</dependency>
     </dependencies>
 </project>
